--- a/src/index.css
+++ b/src/index.css
@@ -272,3 +272,26 @@ a {
 a:hover {
   filter: drop-shadow(0px 0px 10px rgba(255, 255, 255, 0.9));
 }
+
+/* body {
+  background-image: url("https://41.media.tumblr.com/efd15be8d41b12a7b0ef17fba27c3e20/tumblr_mqqy59HMaf1qzattso1_1280.jpg");
+  background-position: center center;
+  background-repeat: no-repeat;
+  background-size: cover;
+} */
+
+/* .LIST_ITEM {
+  background-color: rgba(255, 255, 255, 0.95);
+  border-radius: 5px;
+  color: #333;
+  font-family: sans-serif;
+  line-height: 1.5;
+}
+
+@supports (-webkit-backdrop-filter: none) or (backdrop-filter: none) {
+  .LIST_ITEM {
+    -webkit-backdrop-filter: blur(10px);
+    backdrop-filter: blur(10px);
+    background-color: rgba(30, 41, 59, 0.5);
+  }
+} */
