--- a/src/index.css
+++ b/src/index.css
@@ -13,6 +13,11 @@ body {
 
 * {
   box-sizing: border-box;
+  font-synthesis: none;
+  text-rendering: optimizeLegibility;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+  -webkit-text-size-adjust: 100%;
 }
 
 body {
