--- a/src/index.css
+++ b/src/index.css
@@ -18,7 +18,12 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   -webkit-text-size-adjust: 100%;
+  /* scrollbar-gutter: stable; */
 }
+
+/* * ::-webkit-scrollbar {
+  width: 0 !important;
+} */
 
 body {
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
